assets/src/css/components/_site-header.scss
//
// Site Header.
//

body {
	.site-header {
		.site-header__branding {
			@media ( query( min, tablet ) ) {
				background-color: transparent;
			}
		}
	}
}

.site-header {
	display: flex;
	flex-flow: row nowrap;
	max-width: $site-max-width - ( 2 * $site-gutter );
	margin: 0 auto;
	font-size: 14px;

	@media ( query( min, tablet ) ) {
		flex-flow: column nowrap;
	}

	// Set no nav box-shadow.
	nav {
		&.site-header__nav {
			
			@media ( query( max, tablet ) ) {
				box-shadow: none;
			}
		}
	}

	// Branding container.
	//

	&__branding {
		position: fixed;
		top: 0;
		z-index: 2;
		display: flex;
		flex-flow: row nowrap;
		justify-content: space-between;
		align-items: center;
		width: 100%;

		@media ( query( min, tablet ) ) {
			position: static;
			order: 2;
			flex-flow: column nowrap;
			width: 100%;
			padding: 40px 20px;
			text-align: center;
			color: $black;
		}

		&::after {
			content: '';
			position: absolute;
			left: 20px;
			bottom: 0;
			right: 20px;
			height: 1px;
			border-bottom: 1px solid $white;
			opacity: 0;
			transition: opacity 0.3s ease-out;

			@media ( query( min, tablet ) ) {
				content: none;
			}

			.is-menu-expanded & {
				opacity: 1;
				transition-delay: 0.4s;
			}
		}
	}

	&__title {
		flex: 1 0 auto;
		margin: 0;
		padding-left: 20px;
		font-size: 24px;
		font-weight: 700;

		@media ( query( min, tablet ) ) {
			width: auto;
			height: auto;
			padding: 0;
			font-size: 56px;
		}

		a {
			color: $white;
			opacity: 1;

			@media ( query( min, tablet ) ) {
				color: $black;
			}

			&:hover,
			&:focus {
				opacity: 0.8;
			}
		}

		.custom-logo-link {
			display: block;
			width: 100%;
			max-width: 400px;
			height: 100%;
			background-repeat: no-repeat;
			background-position: left center;
			background-size: contain;

			@media ( query( min, tablet ) ) {
				height: auto;
			}
		}

		.custom-logo {
			max-height: 100%;

			@media ( query( min, tablet ) ) {
				display: block;
			}

			img {
				object-fit: contain;
			}
		}
	}

	&__description {
		display: none;
		margin: 0;
		font-size: 18px;
		font-weight: 300;

		@media ( query( min, tablet ) ) {
			display: block;
		}
	}

	//
	// Mobile Menu Toggle.
	//

	&__menu-toggle {
		display: block;
		position: relative;
		padding: 0;
		width: 52px;
		height: 52px;
		margin-right: 4px;
		cursor: pointer;
		background-color: transparent;
		border: none;

		@media ( query( min, tablet ) ) {
			display: none;
		}

		&::before,
		&::after {
			content: '';
			display: block;
			position: absolute;
			top: 50%;
			left: 50%;
			transform: translate( -50%, -50% );
			height: 2px;
			width: 20px;
			transition: box-shadow 0.3s ease-out, transform 0.5s cubic-bezier( 0.23, 1, 0.32, 1 ), opacity 0.5s cubic-bezier( 0.23, 1, 0.32, 1 );
		}

		&::after {
			opacity: 0;
		}

		.is-menu-expanded &::before {
			transform: translate( -50%, -50% ) rotateZ( 45deg );
			box-shadow: none;
		}

		.is-menu-expanded &::after {
			transform: translate( -50%, -50% ) rotateZ( -45deg );
			opacity: 1;
		}
	}

	//
	// Header nav container.
	//

	&__nav {
		bottom: 0;
		display: flex;
		justify-content: space-between;
		align-items: center;
		left: 0;
		overflow-y: scroll;
		position: absolute;
		right: 0;
		top: 30px;
		transform: translateY( -100% );
		transition: transform 0.5s cubic-bezier( 0.23, 1, 0.32, 1 );
		z-index: 1;

		.is-menu-expanded & {
			transform: none;
		}

		@media ( query( min, tablet ) ) {
			order: 1;
			z-index: 3;
			position: fixed;
			top: 0;
			bottom: auto;
			max-width: $site-max-width - ( 2 * $site-gutter );
			margin: 0 auto;
			padding: 6px 20px;
			overflow: visible;
			display: flex;
			flex-flow: row nowrap;
			justify-content: space-between;
			align-items: center;
			transform: none;
			transition: none;

			&::after {
				content: none;
			}
		}

		@media ( query( min, site-width ) ) {
			padding: 6px 0;
		}
	}

	//
	// Search form.
	//
	&__search {

		&.site-header__search-desktop {
			@media ( query( min, tablet ) ) {
				display: block;
			}
		}

		display: none;
		margin-top: -4px;
		margin-bottom: -4px;

		input {
			border: 0;
			padding: 4px;
			font-size: 14px;
			max-width: 70px;
			transition: max-width 100ms linear, background-color 100ms linear;
			text-overflow: ellipsis;

			&:focus {
				background-color: $white;
				color: $black;
				max-width: 200px;
			}

			&::placeholder {
				font-size: 14px;
			}
		}

		button {
			@extend %search-icon;
			margin-top: 4px;
			margin-left: 4px;
			float: right;
		}
	}
}

